# bekobrew

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.txt  Makefile  README.md  config  install.sh  install_test.sh
script/: bootstrap  build.sh  build_bekobrew  build_installer  install.sh  make.sh  setenv
script/travis/: build_sh19910711  publish_bekobrew  publish_installer
src/: bekobrew.sh  bekobuild.c  bekobuild.h  cli.c  cli.h  command.c  command.h  inline_utils.h  installer.sh  main.c  request.c  request.h  version.h
src/bekobrew/: hello.sh  makepkg.sh
src/sub_command/: help.c  install.c  version.c
test/: bekobuild_test.cpp
test/bekobuild_test/: BEKOBUILD
